[439] Refactor visa filters searching to query courses

--- a/swagger/public_v1/component_schemas/CourseFilter.yml
+++ b/swagger/public_v1/component_schemas/CourseFilter.yml
@@ -112,7 +112,7 @@ properties:
       - two_two
       - third_class
       - not_required
-  provider_can_sponsor_visa:
-      description: "Only return courses where the provider can sponsor either a skilled worker or student visa"
+  can_sponsor_visa:
+      description: "Only return courses where a skilled worker or student visa can be sponsored."
       type: boolean
       example: true
