--- a/config/settings.yml
+++ b/config/settings.yml
@@ -110,6 +110,7 @@ features:
     # state: open # Users can make requests for allocations
     # state: closed # Readonly - Users can see if they have or have not made request (does not show number of places)
     state: confirmed # final allocation places are displayed to users in a readonly state
+  visa_sponsorship_on_course: false
 
 cookies:
   consent:
