--- a/config/analytics.yml
+++ b/config/analytics.yml
@@ -166,6 +166,7 @@ shared:
     - updated_at
   user:
     - id
+    - sign_in_user_id
     - first_login_date_utc
     - last_login_date_utc
     - welcome_email_date_utc
