--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -36,8 +36,16 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 10
+  labels:
+  - DevOps
+  - dependencies
+  - github_actions
 - package-ecosystem: terraform
   directory: "/terraform"
   schedule:
     interval: daily
   open-pull-requests-limit: 10
+  labels:
+  - DevOps
+  - dependencies
+  - terraform
