--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,6 +2,7 @@ environment:
   name: "beta"
   label: "Beta"
 support_email: becomingateacher@digital.education.gov.uk
+campaign_email: itt.engagement@education.gov.uk
 
 search_ui:
   base_url: https://localhost:5000
@@ -111,6 +112,7 @@ features:
     # state: closed # Readonly - Users can see if they have or have not made request (does not show number of places)
     state: confirmed # final allocation places are displayed to users in a readonly state
   visa_sponsorship_on_course: true
+  engineers_teach_physics_on_course: false
 
 cookies:
   consent:
